Uart + Data logger ok

--- a/Flight_Controller/Software/Debug/makefile
+++ b/Flight_Controller/Software/Debug/makefile
@@ -17,6 +17,7 @@ RM := rm -rf
 -include Core/OS/scheduler/subdir.mk
 -include Core/OS/events/subdir.mk
 -include Core/OS/subdir.mk
+-include Core/Data_Logger/subdir.mk
 -include subdir.mk
 -include objects.mk
 
