remove settings from vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Sensors/Board/Project Logs for Sensors
 Sensors/Board/History
 Flight_Controller/Software/Debug
+Flight_Controller/Software/.vscode
 MatLab/main.asv
